# RTSoftSummerSchool

1.1-udev-rule/: 71-usb.rules  copy-logs.sh
1.2-kernel-module/: ADC.c  Makefile
2.1-docker-firefox/: Dockerfile
2.2-opencv-contrast/: CMakeLists.txt  Dockerfile
2.2-opencv-contrast/src/: main.cpp
3.1-opencv-mqtt/: docker-compose.yml
3.1-opencv-mqtt/mqtt/: Dockerfile
3.1-opencv-mqtt/opencv/: CMakeLists.txt  Dockerfile
3.1-opencv-mqtt/opencv/src/: main.cpp
4.1-kafka-docker/: docker-compose.yml
4.1-kafka-docker/broker/: Dockerfile
4.1-kafka-docker/consumer/: Dockerfile
4.1-kafka-docker/producer/: Dockerfile
4.2-trajectory-docker/02-mqtt-to-kafka/: broker.py
4.2-trajectory-docker/04-kafka-to-influx/: broker.py
